--- a/middle_todo/Base.lproj/Main.storyboard
+++ b/middle_todo/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="746"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -165,6 +165,12 @@
                                     <barButtonItem systemItem="compose" id="UEy-vw-krf">
                                         <connections>
                                             <segue destination="eeA-iF-o2T" kind="presentation" id="ndF-GS-yfk"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="rvA-j9-Z4o"/>
+                                    <barButtonItem systemItem="action" id="5DQ-5z-RR5">
+                                        <connections>
+                                            <action selector="share:" destination="ga5-ZO-NVz" id="v7i-eI-S7l"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
